# mdnspp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml  llm-review.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
.github/workflows/: config.yaml  fuzz.yml  linux.yml  macos.yml  windows.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
cmake/: mdnsppConfig.cmake.in
doc/: README.md  async-patterns.md  cmake-integration.md  getting-started.md  policies.md  socket-options.md
doc/api/: observer.md  observer_options.md  querier.md  resolved_service.md  service_discovery.md  (+2 more)
docs/: README.md  custom-policies.md  local-bus.md  mdns-options.md  policies.md  record-cache.md  service-monitor.md  socket-options.md  testing.md
example/: CMakeLists.txt  conflict_resolution.cpp  discover.cpp  enumerate_types.cpp  inquire.cpp  log_sink.cpp  multi_serve.cpp  observe.cpp  query.cpp  serve.cpp  subtype_discovery.cpp
example/asio/: CMakeLists.txt  discover.cpp  observe.cpp  query.cpp  serve.cpp
examples/: CMakeLists.txt  conflict_resolution.cpp
examples/asio/: 01_observer.cpp  02_querier.cpp  03_discover.cpp  04_monitor.cpp  05_server.cpp  06_coroutine.cpp  07_use_future.cpp  CMakeLists.txt
examples/observer/: 01_basic.cpp  02_asio_observer.cpp  CMakeLists.txt
examples/querier/: 01_basic.cpp  02_asio_callback.cpp  02_asio_querier.cpp  CMakeLists.txt
examples/record_cache/: 01_standalone.cpp  02_promiscuous.cpp  02_ttl_expiry.cpp  CMakeLists.txt
examples/service_discovery/: 01_basic.cpp  02_subtype.cpp  03_enumerate_types.cpp  04_asio_server.cpp  CMakeLists.txt
examples/service_monitor/: 01_basic.cpp  02_custom_group.cpp  03_asio_callback.cpp  03_asio_monitor.cpp  03_observe_mode.cpp  04_observe_mode.cpp  CMakeLists.txt
examples/service_server/: 01_basic.cpp  02_multi_serve.cpp  03_conflict_resolution.cpp  04_asio_start.cpp  CMakeLists.txt
lib/: CMakeLists.txt
lib/mdnspp/: CMakeLists.txt
lib/mdnspp-asio/: CMakeLists.txt
lib/mdnspp-asio/include/mdnspp/: asio.h
lib/mdnspp-asio/include/mdnspp/asio/: asio_completion.h  asio_policy.h  asio_socket.h  asio_timer.h  async_discover.h  async_observe.h  async_query.h  async_start.h
lib/mdnspp-local/: CMakeLists.txt
lib/mdnspp-local/include/mdnspp/local/: local_bus.h  local_executor.h  local_harness.h  local_policy.h  local_socket.h  local_timer.h
lib/mdnspp-testing/: CMakeLists.txt
lib/mdnspp-testing/include/mdnspp/testing/: mock_policy.h  test_clock.h
lib/mdnspp/include/mdnspp/: asio.h  basic_observer.h  basic_querier.h  basic_service_discovery.h  basic_service_monitor.h  basic_service_server.h  cache_entry.h  cache_options.h  callback_types.h  defaults.h  dns.h  dns_name.h  endpoint.h  mdns_error.h  mdns_options.h  monitor_options.h  native.h  network_interface.h  observer_options.h  parse.h  policy.h  querier.h  query_options.h  record_cache.h  records.h  resolved_service.h  service_discovery.h  service_info.h  service_options.h  service_server.h  service_type.h  socket_options.h
lib/mdnspp/include/mdnspp/default/: default_context.h  default_policy.h  default_socket.h  default_timer.h
lib/mdnspp/include/mdnspp/detail/: basic_mdns_peer_base.h  compat.h  dns_enums.h  dns_frame.h  dns_query.h  dns_read.h  dns_response.h  dns_wire.h  dns_write.h  duplicate_answer_suppression.h  mdns_util.h  platform.h  query_backoff.h  recv_loop.h  server_known_answer.h  server_probe_announce.h  server_query_match.h  server_response_aggregation.h  tc_accumulator.h  ttl_refresh.h  validate_multicast.h
lib/mdnspp/include/mdnspp/native/: native_timer.h
src/: mdns.cpp
tests/: CMakeLists.txt  asio_completion_token_test.cpp  asio_conformance_test.cpp  concept_conformance_test.cpp  default_conformance_test.cpp  default_timer_test.cpp  defaults_compile_test.cpp  dns_test.cpp  dns_wire_test.cpp  duplicate_answer_suppression_test.cpp  endpoint_test.cpp  enumerate_interfaces_test.cpp  local_bus_rfc_compliance_test.cpp  local_bus_routing_test.cpp  local_conformance_test.cpp  log_test.cpp  mdns_util_test.cpp  native_conformance_test.cpp  native_timer_test.cpp  observer_test.cpp  parse_test.cpp  querent_test.cpp  querier_test.cpp  query_backoff_test.cpp  record_cache_test.cpp  records_test.cpp  recv_loop_test.cpp  server_known_answer_test.cpp  server_probe_announce_test.cpp  server_query_match_test.cpp  server_response_aggregation_test.cpp  service_aggregation_test.cpp  service_discovery_test.cpp  service_info_test.cpp  service_monitor_test.cpp  service_server_test.cpp  service_server_tsan_test.cpp  socket_options_test.cpp
tests/compile/: CMakeLists.txt  infra_headers_compile_test.cpp
tests/fuzz/: CMakeLists.txt  fuzz_dns_name.cpp  fuzz_encode_dns_name.cpp  fuzz_parse_a.cpp  fuzz_parse_aaaa.cpp  fuzz_parse_ptr.cpp  fuzz_parse_srv.cpp  fuzz_parse_txt.cpp  fuzz_read_dns_name.cpp  fuzz_roundtrip_dns_name.cpp  fuzz_roundtrip_name.cpp  fuzz_skip_dns_name.cpp  fuzz_walk_dns_frame_raw.cpp  fuzz_walk_dns_frame_smart.cpp  generate_corpus.cpp
tests/include/unit_test/: autonomos_unittest_state.h  resources.h  taskspy.cpp  taskspy.h  temporalspy.cpp  temporalspy.h
tests/integration/: CMakeLists.txt  main.cpp  run.sh
tests/unit/: CMakeLists.txt  asio_conformance_test.cpp  default_conformance_test.cpp  dns_name_test.cpp  dns_wire_test.cpp  local_bus_discovery_test.cpp  local_bus_legacy_unicast_test.cpp  local_bus_per_type_ttl_test.cpp  local_bus_recv_ttl_test.cpp  local_bus_rfc_compliance_test.cpp  local_bus_routing_test.cpp  local_bus_tc_delay_test.cpp  local_conformance_test.cpp  mdns_util_test.cpp  parse_test.cpp  record_cache_test.cpp  records_test.cpp  recv_loop_test.cpp  server_known_answer_test.cpp  server_probe_announce_test.cpp  server_query_match_test.cpp  server_response_aggregation_test.cpp  service_aggregation_test.cpp  service_info_test.cpp  service_monitor_test.cpp  service_server_test.cpp  service_server_tsan_test.cpp  socket_options_test.cpp  tc_accumulator_test.cpp  ttl_refresh_test.cpp
(+201 files in other folders)
