set(UNIT_TEST_RESOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/resources")
set(UNIT_TEST_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include)

# Standalone compile test for infrastructure headers (Phase 12)
add_executable(infra_headers_compile_test compile/infra_headers_compile_test.cpp)
target_include_directories(infra_headers_compile_test PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../include)
add_test(NAME infra_headers_compile_test COMMAND infra_headers_compile_test)

function(make_test TEST_FILE)
    add_executable(${TEST_FILE} "${TEST_FILE}.cpp")
    target_link_libraries(${TEST_FILE} PRIVATE mdnspp Catch2::Catch2WithMain)
    target_include_directories(${TEST_FILE} PRIVATE ${UNIT_TEST_INCLUDE})
    add_test(NAME ${TEST_FILE} COMMAND ${TEST_FILE})
endfunction()

make_test(log_test)
make_test(concept_conformance_test)
make_test(recv_loop_test)
make_test(parse_test)
make_test(service_discovery_test)
make_test(querier_test)
make_test(service_info_test)
make_test(service_server_test)
make_test(observer_test)
make_test(dns_wire_test)
make_test(native_timer_test)
make_test(service_aggregation_test)
make_test(dns_test)
make_test(endpoint_test)

if(MDNSPP_ENABLE_ASIO_POLICY)
    function(make_asio_test TEST_FILE)
        add_executable(${TEST_FILE} "${TEST_FILE}.cpp")
        target_link_libraries(${TEST_FILE} PRIVATE mdnspp_asio Catch2::Catch2WithMain)
        target_include_directories(${TEST_FILE} PRIVATE ${UNIT_TEST_INCLUDE})
        add_test(NAME ${TEST_FILE} COMMAND ${TEST_FILE})
    endfunction()
    make_asio_test(asio_conformance_test)
    make_asio_test(service_server_tsan_test)
    make_asio_test(asio_completion_token_test)
endif()

if(MDNSPP_ENABLE_NATIVE_POLICY)
    function(make_native_test TEST_FILE)
        add_executable(${TEST_FILE} "${TEST_FILE}.cpp")
        target_link_libraries(${TEST_FILE} PRIVATE mdnspp_native Catch2::Catch2WithMain)
        target_include_directories(${TEST_FILE} PRIVATE ${UNIT_TEST_INCLUDE})
        add_test(NAME ${TEST_FILE} COMMAND ${TEST_FILE})
    endfunction()
    make_native_test(native_conformance_test)
endif()

