add_executable(mdnspp_example_record_cache_01_standalone 01_standalone.cpp)
target_link_libraries(mdnspp_example_record_cache_01_standalone PRIVATE mdnspp::mdnspp)

add_executable(mdnspp_example_record_cache_02_promiscuous 02_promiscuous.cpp)
target_link_libraries(mdnspp_example_record_cache_02_promiscuous PRIVATE mdnspp::mdnspp)
