function(make_test TEST_FILE)
    add_executable(${TEST_FILE} "${CMAKE_CURRENT_LIST_DIR}/${TEST_FILE}.cpp")
    target_link_libraries(${TEST_FILE} PRIVATE mdnspp mdnspp::testing Catch2::Catch2WithMain)
    target_compile_options(${TEST_FILE} PRIVATE ${MDNSPP_WARNING_FLAGS})
    add_test(NAME ${TEST_FILE} COMMAND ${TEST_FILE})
endfunction()

function(make_local_test TEST_FILE)
    add_executable(${TEST_FILE} "${CMAKE_CURRENT_LIST_DIR}/${TEST_FILE}.cpp")
    target_link_libraries(${TEST_FILE} PRIVATE mdnspp mdnspp::local Catch2::Catch2WithMain)
    target_compile_options(${TEST_FILE} PRIVATE ${MDNSPP_WARNING_FLAGS})
    add_test(NAME ${TEST_FILE} COMMAND ${TEST_FILE})
endfunction()

if (MDNSPP_ENABLE_ASIO_POLICY)
    function(make_asio_test TEST_FILE)
        add_executable(${TEST_FILE} "${CMAKE_CURRENT_LIST_DIR}/${TEST_FILE}.cpp")
        target_link_libraries(${TEST_FILE} PRIVATE mdnspp mdnspp::asio Catch2::Catch2WithMain)
        target_compile_options(${TEST_FILE} PRIVATE ${MDNSPP_WARNING_FLAGS})
        add_test(NAME ${TEST_FILE} COMMAND ${TEST_FILE})
    endfunction()
    make_asio_test(asio_conformance_test)
    make_asio_test(service_server_tsan_test)
    make_asio_test(asio_completion_token_test)
endif ()

make_test(records_test)
make_test(concept_conformance_test)
make_test(recv_loop_test)
make_test(parse_test)
make_test(service_discovery_test)
make_test(querier_test)
make_test(service_info_test)
make_test(socket_options_test)
make_test(service_server_test)
make_test(observer_test)
make_test(dns_wire_test)
make_test(service_aggregation_test)
make_test(dns_test)
make_test(mdns_util_test)
make_test(enumerate_interfaces_test)
if (WIN32)
    target_link_libraries(enumerate_interfaces_test PRIVATE iphlpapi)
endif ()
make_test(endpoint_test)
make_test(default_timer_test)
make_test(default_conformance_test)
make_test(server_query_match_test)
make_test(server_known_answer_test)
make_test(server_probe_announce_test)
make_test(server_response_aggregation_test)
make_test(record_cache_test)
make_test(query_backoff_test)
make_test(ttl_refresh_test)
make_test(tc_accumulator_test)
make_test(duplicate_answer_suppression_test)
make_test(service_monitor_test)
make_test(dns_name_test)

make_local_test(local_conformance_test)
make_local_test(local_bus_discovery_test)
make_local_test(local_bus_routing_test)
make_local_test(local_bus_rfc_compliance_test)
make_local_test(local_bus_per_type_ttl_test)
make_local_test(local_bus_tc_delay_test)
make_local_test(local_bus_recv_ttl_test)